<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalPage">

    <TextView
        android:id="@+id/PublisherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/PublisherTextView"
        app:layout_constraintTop_toBottomOf="@+id/DeveloperText" />

    <TextView
        android:id="@+id/DeveloperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/DeveloperTextView"
        app:layout_constraintTop_toBottomOf="@+id/GameNameText" />

    <TextView
        android:id="@+id/GameNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/NameFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DeveloperTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/DeveloperFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameNameTextView" />

    <TextView
        android:id="@+id/PublisherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/PublisherFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeveloperTextView" />

    <TextView
        android:id="@+id/GenreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/GenreFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PublisherTextView" />

    <TextView
        android:id="@+id/ReleaseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/ReleaseDateFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenreTextView" />

    <TextView
        android:id="@+id/PlatformTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/PlatformFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReleaseDateTextView" />

    <TextView
        android:id="@+id/PEGITextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/PEGIFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlatformTextView" />

    <TextView
        android:id="@+id/VersionTextView"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VersionFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PEGITextView" />

    <TextView
        android:id="@+id/GameNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/GameNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GenreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/GenreTextView"
        app:layout_constraintTop_toBottomOf="@+id/PublisherText" />

    <TextView
        android:id="@+id/PlatformText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/PlatformTextView"
        app:layout_constraintTop_toBottomOf="@+id/ReleaseDateText" />

    <TextView
        android:id="@+id/ReleaseDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/ReleaseDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/GenreText" />

    <TextView
        android:id="@+id/PEGIText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/PEGITextView"
        app:layout_constraintTop_toBottomOf="@+id/PlatformText" />

    <TextView
        android:id="@+id/VersionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/VersionTextView"
        app:layout_constraintTop_toBottomOf="@+id/PEGIText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="FinishOnClick"
        android:width="150dp"
        android:height="70dp"
        android:text="@string/Finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="PreviousOnClick"
        android:text="@string/Return"
        android:height="70dp"
        android:width="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>