<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/GameNameLayout"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <EditText
        android:id="@+id/GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="320dp"
        android:hint="@string/Name"
        android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DeveloperLayout"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameNameLayout">

        <EditText
            android:id="@+id/Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Developer"
            android:minWidth="320dp"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PublisherLayout"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeveloperLayout">
    <EditText
        android:id="@+id/Publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Publisher"
        android:minWidth="320dp"
        android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:height="70dp"
        android:onClick="NextButtonOnClick"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:height="70dp"
        android:enabled="false"
        android:text="@string/Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>