<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="320dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        >
        <EditText
            android:id="@+id/Email"
            android:minWidth="320dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PhoneLayout"
        android:layout_width="320dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp">
        <EditText
            android:layout_width=""
            android:layout_height=""/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="FinishOnClick"
        android:width="150dp"
        android:height="70dp"
        android:text="@string/Finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="PreviousOnClick"
        android:text="@string/Return"
        android:height="70dp"
        android:width="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>